2007-10-31  Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: fix suggest_depends syntax

2007-10-30  Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 3.95.0

2007-10-30  Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: add xrdb

2007-10-30  Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: fix typo in suggest_depends

2007-10-29  Treeve Jelbert <treeve@sourcemage.org>
	* kde4.desktop: refer to correct file
	* kde4.sh: added
	* PRE_BUILD: added, to create kde4 group
	* INSTALL: install kde4.sh
	  it is now possible to start a kde4 session and have a working desktop
	  beware that if kde3 is also installed, kde4 will take precedence!!!
	  by default, only users who belong to group kde4 can use this
	  they will also have a separate desktop configuration for kde3/4
	  this is controlled by the variable KDEHOME
	  reset KDEHOME to share the same desktop in kde3/4
	  you will then get a mixture of kde3/4 applications

2007-10-18  Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: add xproto, xmessage, xkeyboard-config, plasma

2007-10-18  Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 3.94.0

2007-09-21 Eric Sandall <sandalle@sourcemage.org>
	* DEPENDS: Dependency on X11-SERVER is already covered in KDE_DEPENDS
	* INSTALL: /usr/share/xsessions is a directory, create it before copying

2007-09-07 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: update description
	* INSTALL: fix typo

2007-09-07 Treeve Jelbert <treeve@sourcemage.org>
	* CONFLICTS, PROVIDES: deleted
	* INSTALL: added, for kde4.desktop
	* init.d/kdm4, kde4.desktop: added, moved from kdebase4

2007-09-06 Treeve Jelbert <treeve@sourcemage.org>
	* CONFLICTS, PROVIDES: added
	* DEPENDS: add OPENGL
	  remove dead code, tidy up

2007-09-06 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 3.93.0

2007-08-03 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 3.92.0
	  spell created
