@@ -1,4 +1,8 @@
 2007-10-31  Treeve Jelbert <treeve@sourcemage.org>
+	* kde4.sh: remove QTDIR
+	  exclude root from using this script
+
+2007-10-31  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: fix suggest_depends syntax
 
 2007-10-30  Treeve Jelbert <treeve@sourcemage.org>
